--- a/app/views/contact_mailer/contact_email.html.erb
+++ b/app/views/contact_mailer/contact_email.html.erb
@@ -21,7 +21,7 @@
       Message: <%= @customer_contact.message.html_safe %>
     </p>
     <p>
-      Date: <%= @customer_contact.created_at %> (GMT+07:00)
+      Date: <%= @customer_contact.created_at.in_time_zone("Asia/Bangkok").strftime("%d/%m/%Y %H:%M") %> (GMT+07:00)
     </p>
   </body>
 </html>
