--- a/app/views/home/_footer.html.erb
+++ b/app/views/home/_footer.html.erb
@@ -36,7 +36,7 @@
               <li><i class="fa fa-map-marker"></i> <%= t(:company_address) %></li>
               <li><i class="fa fa-phone"></i> <a href="#" class="important"><%= @company.phone + " - " + @company.phone_2 %></a></li>
               <li><i class="fa fa-fax"></i> <a href="#"><%= @company.fax %></a></li>
-              <li><i class="fa fa-envelope"></i> <a href="mailto:<%= @company.email %>"><%= @company.email %></a> - <a href="mailto:<%= @company.email_2 %>"><%= @company.email_2 %></li>
+              <li><i class="fa fa-envelope"></i> <a href="mailto:<%= @company.email %>"><%= @company.email %></a> - <a href="mailto:<%= @company.email_2 %>"><%= @company.email_2 %></a></li>
            </ul>
         </div>
         <!-- /Contact Info Widget -->
