--- a/app/views/home/_header.html.erb
+++ b/app/views/home/_header.html.erb
@@ -51,6 +51,7 @@
                     <li class="menu-item"><%= link_to t(:pictures_completed_construction_works), { controller: "gallery_completed_construction", action: "index" } %></li>
                     <li class="menu-item"><%= link_to t(:pictures_construction_works), { controller: "construction_work", action: "index" } %></li>
                     <li class="menu-item"><%= link_to t(:pictures_investment_projects), { controller: "investment_projects", action: "index" } %></li>
+                    <li class="menu-item"><%= link_to t(:pictures_equipment), { controller: "picture_equipment", action: "index" } %></li>
                  </ul>
               </li>
               <li class="menu-item"><%= link_to t(:recruitment), { controller: "recruitment", action: "index" } %></li>
