--- a/app/views/picture_equipment/index.html.erb
+++ b/app/views/picture_equipment/index.html.erb
@@ -7,7 +7,7 @@
   <main class="site-main">
      <!-- Page header -->
      <div class="page-header page-header-sm">
-        <h1 class="text-uppercase page-title"><%= t(:pictures_completed_construction_works) %></h1>
+        <h1 class="text-uppercase page-title"><%= t(:picture_equipment) %></h1>
      </div>
      <!-- /Page header -->
      <!-- Breadcrumbs -->
@@ -16,7 +16,7 @@
            <ol>
               <li><a href="<%= root_path %>"><%= t(:home) %></a></li>
               <li><%= link_to t(:gallery), "#" %></li>
-              <li class="active"><%= t(:pictures_completed_construction_works) %></li>
+              <li class="active"><%= t(:picture_equipment) %></li>
            </ol>
         </div>
      </div>
