--- a/app/views/admin/galleries/_form.html.erb
+++ b/app/views/admin/galleries/_form.html.erb
@@ -26,7 +26,7 @@
                 <div class="form-group">
                     <%= f.label "Type: ", class: "col-lg-2 control-label" %>
                     <div class="col-lg-10">
-                        <%= f.select(:type_vn, ['Hình ảnh các công trình đã hoàn thành', 'Hình ảnh các dự án đầu tư', 'Hình ảnh các công trình thi công'], {}, { :class => 'select' })%>
+                        <%= f.select(:type_vn, ['Hình ảnh các công trình đã hoàn thành', 'Hình ảnh các dự án đầu tư', 'Hình ảnh các công trình thi công', 'Hình ảnh các thiết bị'], {}, { :class => 'select' })%>
                     </div>
                 </div>
                     
@@ -77,7 +77,7 @@
                 <div class="form-group">
                     <%= f.label "Type: ", class: "col-lg-2 control-label" %>
                     <div class="col-lg-10">
-                        <%= f.select(:type_en, ['Pictures of completed construction projects', 'Pictures of investment projects', 'Pictures of construction work'], {}, { :class => 'select' })%>
+                        <%= f.select(:type_en, ['Pictures of completed construction projects', 'Pictures of investment projects', 'Pictures of construction work', 'Pictures of Equipment'], {}, { :class => 'select' })%>
                     </div>
                 </div>
                     
