--- a/app/views/gallery_completed_construction/index.html.erb
+++ b/app/views/gallery_completed_construction/index.html.erb
@@ -65,6 +65,7 @@
                      </article>
                   <% end %>
                <% end %>
+               <%= will_paginate @galleries, previous_label: '<', next_label: '>', renderer: BootstrapPagination::Rails %>
             </div>
             <aside class="sidebar sidebar-right col-md-3">
                <%= render '/letter_spring/right_menu' %>
