--- a/app/views/vietren_news/index.html.erb
+++ b/app/views/vietren_news/index.html.erb
@@ -72,6 +72,7 @@
                      </article>
                   <% end %>
                <% end %>
+               <%= will_paginate @vietren_news, previous_label: '<', next_label: '>', renderer: BootstrapPagination::Rails %>
            </div>
            <aside class="sidebar sidebar-right col-md-3">
               <%= render 'letter_spring/right_menu' %>
