--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -42,7 +42,7 @@
       <div class="container">
          <div class="row">
             <div class="col-md-12">
-               <h2 class="title"><%= t(:company_name) %></h2> </div>
+               <h2 class="title">Công Ty Cổ Phần VIỆT REN</h2> </div>
          </div>
          <div class="row">
             <div class="col-md-4">
