--- a/app/views/layouts/frontend.html.erb
+++ b/app/views/layouts/frontend.html.erb
@@ -4,17 +4,14 @@
    <head>
       <meta charset="UTF-8">
       <meta name="viewport" content="width=device-width, initial-scale=1">
-      <meta name="description" content="Perfectly crafted to suite your construction business with almost unlimited options to get almost unlimited options.">
       <% if params[:locale] == "en" %>
          <title>VietRen Joint Stock Company</title>
       <% else %>
          <title>Công Ty Cổ Phần Việt Ren</title>
       <% end %>
-      
       <link rel="shortcut icon" href="favicon.ico">
-      <meta property="og:title" content="Construction - HTML Template" />
-      <meta property="og:type" content="website" />
-      <meta property="og:url" content="http://anpsthemes.com/construction-html" />
+      <meta property="og:title" content="Công Ty Cổ Phần Việt Ren" />
+      <meta property="og:url" content="http://vietren.vn/" />
       <%= favicon_link_tag '/frontend/images/favicon.ico', rel: 'icon', type: 'image/png' %>
       <meta property="og:site_name" content="constructionhtml" />
       <!-- Revolution Slider Stylesheets -->
