update menu mau xanh

--- a/app/views/home/_header.html.erb
+++ b/app/views/home/_header.html.erb
@@ -9,7 +9,7 @@
      <nav class="site-navigation pull-right">
         <div class="mobile-wrap">
            <!-- Main menu -->
-           <ul id="main-menu" class="main-menu">
+           <ul id="main-menu" class="main-menu" style="background-color:#009cd7;color:#fff;padding-top: 0.8em;padding-right:10px;">
               <li class="menu-item"><%= link_to t(:home), root_path %>
               </li>
               <li class="menu-item menu-item-has-children"><%= link_to t(:intro), "#" %>
