--- a/app/views/organization/index.html.erb
+++ b/app/views/organization/index.html.erb
@@ -25,7 +25,7 @@
            <aside class="sidebar sidebar-left col-md-3">
               <%= render 'letter_spring/right_menu' %>
            </aside>
-           <div class="page-content col-md-9 padding-bottom-xl">
+           <div class="page-content col-md-9 padding-bottom-xl table-organization">
               <% if params[:locale] == "en" %>
                 <article class="post post-single">
                   <h3 class="title small-margin text-uppercase"><%= @organizations.title_en %></h3>
