--- a/public/frontend/stylesheets/custom.css
+++ b/public/frontend/stylesheets/custom.css
@@ -50,6 +50,7 @@ body {
 strong {
     color: #000000;
     font-weight: bold;
+    font-size: 15px;
 }
 .tp-caption {
     font-size: 50px !important;
@@ -206,18 +207,6 @@ ul.pagination > li.active > span {
 .site-footer .widget-title:after {
     background-color: #138dff !important;
 }
-/*.table-organization table td.table {
-    width: 0%;
-    padding: 5px;
-    padding-bottom: 0px;
-}
-.table-organization table td p {
-    margin: 3px 0 3px;
-}
-.table-organization table td.table1 {
-    width: 6%;
-    padding: 5px;
-}*/
 .post-single table td {
     width: 0%;
     padding: 5px;
@@ -229,4 +218,12 @@ ul.pagination > li.active > span {
 }
 .post-single table td p span, .post-single table td p strong {
     font-size: 13px;
+}
+.post-content {
+    font-size: 13px;
+}
+.post-content ul {
+    margin-top: 0;
+    margin-bottom: 10px;
+    font-size: 1.2em !important;
 }
